--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
+<p>我是猪霸天,这是我的个人网站。 </p>
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
 
 <ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
+  <li> <a href="https://www.bilibili.com/video/BV1P24y1K7Th/?spm_id_from=333.337.search-card.all.click">日常一疯</a> </li>
+  <li> <a href="https://www.bilibili.com/">我的徒弟们在这里</a> </li>
 </ul>
