--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>Hello 大家好</p>
 <p>我是猪霸天,这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<p>你可以在以下的网站找到我以及我的徒弟们</p>
 
 <ul>
   <li> <a href="https://www.bilibili.com/video/BV1P24y1K7Th/?spm_id_from=333.337.search-card.all.click">日常一疯</a> </li>
