--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <p>你可以在以下的网站找到我以及我的徒弟们</p>
 
 <ul>
-  <li> <a href="https://www.bilibili.com/video/BV1P24y1K7Th/?spm_id_from=333.337.search-card.all.click">日常一疯</a> </li>
-  <li> <a href="https://www.bilibili.com/">我的徒弟们在这里</a> </li>
+  <li> <a href="https://www.bilibili.com/video/BV1P24y1K7Th/?spm_id_from=333.337.search-card.all.click",target="_blank">日常一疯</a> </li>
+  <li> <a href="https://www.bilibili.com/",target="_blank">我的徒弟们在这里</a> </li>
 </ul>
