--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+<meta charset="utf-8">
 <h1>所有人给我站一边！</h1>
-<p>我是猪霸天,这是我的个人脚趾尖 </p>
+<p>我是超人强,这是我的个人脚趾尖 </p>
+<img onmousemove="bigImg(this)" onmouseout="normalImg(this)" border="0" src="images/pig.png"  alt="超人强の遗照" width="270" height="122">
 <hr />
-<p>你可以在以下的网站找到我以及我的徒弟们</p>
+<p>你可以在以下的网站找到我以及高上天的猪霸天</p>
 
 <ul>
   <li> <a href="https://www.bilibili.com/video/BV1P24y1K7Th/?spm_id_from=333.337.search-card.all.click",target="_blank">日常一疯</a> </li>
-  <li> <a href="https://www.bilibili.com/",target="_blank">我的徒弟们在这里</a> </li>
+  <li> <a href="https://www.bilibili.com/",target="_blank">猪霸天在这里</a> </li>
 </ul>
+<hr />
+
+
