--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <h1>所有人给我站一边！</h1>
 <p>我是超人强,这是我的个人脚趾尖 </p>
-<img onmousemove="bigImg(this)" onmouseout="normalImg(this)" border="0" src="images/pig.png"  alt="超人强の遗照" width="270" height="122">
+<img border="0" src="images/pig.png"  alt="超人强の遗照" width="270" height="122">
 <hr />
 <p>你可以在以下的网站找到我以及高上天的猪霸天</p>
 
