--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 </head> 
 <title>我的博客</title>
 <body>
-<h1>Hi,这是我的博客</h1>
-<p>欢迎来到这里!</p>
+<video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
 </body>
 </html>
 
