--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>我的博客</title>
 <body>
 <video width="320" height="240" controls>
-  <source src="诈骗神曲原版.mp4" type="video/mp4">
+  <source src="诈骗神曲原版.mp4" type="/诈骗神曲原版.mp4">
 </video>
 </body>
 </html>
