--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head> 
 <meta charset="utf-8"> 
 </head> 
-<title>我的博客</title>
+<title>一个网页</title>
 <body>
-<video width="640" height="480" controls>
+<video width="320" height="240" controls>
   <source src="诈骗神曲原版.mp4" type="/诈骗神曲原版.mp4">
 </video>
 </body>
