--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <video width="320" height="240" controls>
   <source src="video.mp4" type="/诈骗神曲原版.mp4">
+  <source src="诈骗神曲原版.mp4" type="/诈骗神曲原版.mp4">
 </video>
 </body>
 </html>
