--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head> 
 <title>一个网页</title>
 <body>
-<p>https://www.bilibili.com/video/BV113411p7BT/?spm_id_from=333.337.search-card.all.click&vd_source=3dc76960e681c8ad0c1e57bab4b65d45</p>
+<video width="400" height="300" src="\诈骗神曲原版.mp4">
+</video>
 </body>
 </html>
-
