--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head> 
 <title>一个网页</title>
 <body>
-<video width="400" height="300" src="./诈骗神曲原版.mp4">
+<video width="320" height="240" controls>
+  <source src="诈骗神曲原版.mp4" type="/诈骗神曲原版.mp4">
 </video>
 </body>
-</html>
