--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head> 
 <meta charset="utf-8"> 
 </head> 
-<title>一个网页</title>
+<title>神经大网页</title>
 <body>
 <video width="320" height="240" controls>
   <source src="诈骗神曲原版.mp4" type="\诈骗神曲原版.mp4">
 </video>
+  <style>
+    a{
+      background:red;
+    }
+  </style>
 </body>
