--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 <video width="320" height="240" controls>
   <source src="诈骗神曲原版.mp4" type="\诈骗神曲原版.mp4">
 </video>
-  <style>
-    a{
-      background:red;
-    }
-  </style>
+<p>runoob.com--><a href="http://www.runoob.com/">点我</a>。
+<p>=（</p>
 </body>
