--- a/index.html
+++ b/index.html
@@ -5,9 +5,5 @@
 </head> 
 <title>神经大网页</title>
 <body>
-<video width="320" height="240" controls>
-  <source src="诈骗神曲原版.mp4" type="\诈骗神曲原版.mp4">
-</video>
-<p>runoob.com--><a href="http://www.runoob.com/">点我</a>。
-<p>=（</p>
+<p>runoob--><a href="http://www.runoob.com/">Here</a></p>
 </body>
