--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 </head> 
 <title>神经大网页</title>
 <body>
-<p>runoob--><a href="http://www.runoob.com/">Here</a></p>
+<p><a href="http://www.runoob.com/">点我去RUNNOOB!</a></p>
 </body>
