--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <body>
 <h1>神金大网页</h1>
 <h3><a href="https://enterbox.lanzouu.com/itSXr2j6ytxe">点我下载ClassicCube! -->密码:4wng<--</a></h3>
-<h3><a href="http://spb5h6tsn.hn-bkt.clouddn.com/ab67616d0000bda35.jpg"></a></h3>
+<h3><a href="http://spb5h6tsn.hn-bkt.clouddn.com/ab67616d0000bda35.jpg">蓝精灵</a></h3>
 </body>
