--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8"> 
 </head> 
 <title>神金大网页</title>
+<style type="text/css">
+h1{color:blue;background:black;}
+h3{color:blue;background:black;}
+</style>
 <body>
 <h1>神金大网页</h1>
 <h3><a href="https://enterbox.lanzouu.com/itSXr2j6ytxe">点我下载ClassicCube! -->密码:4wng<--</a></h3>
