--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head> 
 <title>神金大网页</title>
 <style type="text/css">
-h1{color:blue;background:black;}
-h3{color:blue;background:black;}
+body{background:grey}
+h1{color:white;background:brightgrey;}
+h3{color:white;background:brightgrey;}
 </style>
 <body>
 <h1>神金大网页</h1>
