--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <style type="text/css">
 body{background:grey}
 h1{color:white;background:brightgrey;}
-h3{color:white;background:brightgrey;}
+a{color:white;background:brightgrey;}
 </style>
 <body>
 <h1>神金大网页</h1>
 <h3><a href="https://enterbox.lanzouu.com/itSXr2j6ytxe">点我下载ClassicCube! -->密码:4wng<--</a></h3>
-<a href="http://spb5h6tsn.hn-bkt.clouddn.com/ab67616d0000bda35.jpg">
-<img  border="10" src="ab67616d0000bda35.jpg" alt="蓝精灵" width="32" height="32"></a></p>
+<h3><a href="http://spb5h6tsn.hn-bkt.clouddn.com/ab67616d0000bda35.jpg">蓝精灵</a></h3>
+
 <h3><a href="http://spb5h6tsn.hn-bkt.clouddn.com/video_20241002_165457.mp4">韦大人的视频</a></h3>
 </body>
