--- a/index.html
+++ b/index.html
@@ -5,14 +5,41 @@
 </head> 
 <title>神金大网页</title>
 <style type="text/css">
-body{background:grey}
+body {background-image:url('https://www.helloimg.com/i/2025/01/11/6782042315d54.png');}
+/*
+body{background:black}
+https://www.helloimg.com/i/2025/01/11/6782078be18c3.jpg 蓝精灵
+https://www.helloimg.com/i/2025/01/11/6782073ee54df.jpg  鸡公煲
+*/
 h1{color:white;background:brightgrey;}
 a{color:white;background:brightgrey;}
-</style>
-<body>
-<h1>神金大网页</h1>
-<h3><a href="https://enterbox.lanzouu.com/itSXr2j6ytxe">点我下载ClassicCube! -->密码:4wng<--</a></h3>
-<h3><a href="http://spb5h6tsn.hn-bkt.clouddn.com/ab67616d0000bda35.jpg">蓝精灵</a></h3>
 
-<h3><a href="http://spb5h6tsn.hn-bkt.clouddn.com/video_20241002_165457.mp4">韦大人的视频</a></h3>
+div.title{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 8px;
+  background-color: #000000;
+  border: 2px solid #ffffff;
+  font-size: 30px;
+}
+
+
+div.text{
+  padding: 8px;
+  background-color: #000000;
+  border: 2px solid #ffffff;
+  font-size: 20px;
+}
+
+body{color:white}
+
+</style>
+
+<body>
+<div class="title">神金大网页</div>
+<p><p>
+<div class="text"><a href="https://enterbox.lanzouu.com/itSXr2j6ytxe">点我下载ClassicCube! -->密码:4wng<--</a><br><a href="http://spb5h6tsn.hn-bkt.clouddn.com/ab67616d0000bda35.jpg">蓝精灵</a><br><a href="http://spb5h6tsn.hn-bkt.clouddn.com/video_20241002_165457.mp4">韦大人的视频</a></div>
+<div style="padding-bottom:1919810px">
+
 </body>
