--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ body{color:white}
 <div class="title">神金大网页</div>
 <p><p>
 <div class="text">
-<a href="https://enterbox.lanzouu.com/itSXr2j6ytxe">点我下载ClassicCube! -->密码:4wng<--</a><br>
-<a href="http://spb5h6tsn.hn-bkt.clouddn.com/ab67616d0000bda35.jpg">蓝精灵</a><br>
-<a href="http://spb5h6tsn.hn-bkt.clouddn.com/video_20241002_165457.mp4">韦大人的视频</a>
+<a href="http://tool.bitefu.net/123pan/?url=https://www.123865.com/s/2b41Td-rWVq3.html&type=down">点我下载ClassicCube!<br></a>
+<a href="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/99/43/28259254399/28259254399-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1739112098&gen=playurlv2&os=bcache&oi=1363558182&trid=0000205b976ce97a40768c7ca15995769186T&mid=3546662372903895&platform=html5&og=cos&upsig=d537f59fa72509891aa6a330edb18a4a&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=14713&bvc=vod&nettype=0&bw=12044&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000">早期tux大战比尔盖兹珍贵录像</a>
 </div>
 
 <p><p>
 <div class="text">
-<a href="https://dogisyyds.github.io/">蒋某似前留下的遗产</a>
+<a href="https://dogisyyds.github.io/">蒋某似前留下的遗产<br></a>
+<a href="http://enterpage.us.kg/">enterPAGE-我的新站!<br></a>
 </div>
 
 <div style="padding-bottom:1145px">
