--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ div.text{
   font-size: 20px;
 }
 
-body {background-image:url('https://www.helloimg.com/i/2025/01/11/67821c1f87f79.jpg');}
+body {background-image:url('https://pic1.imgdb.cn/item/67a88bcad0e0a243d4fd7a4e.jpg');}
 
 body{color:white}
 </style>
