--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@ body{color:white}
 <a href="https://dogisyyds.github.io/">蒋某似前留下的遗产<br></a>
 <a href="http://enterpage.us.kg/">enterPAGE-我的新站!<br></a>
 </div>
-
+<p><p>
+<div class="text">评论<div>
+<div class="text"><div>
+<script src="https://giscus.app/client.js"
+        data-repo="enterbox/pagetalk"
+        data-repo-id="R_kgDONzHY3Q"
+        data-category="Show and tell"
+        data-category-id="DIC_kwDONzHY3c4Cmjhy"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
+</body>
 <div style="padding-bottom:1145px">
 </body>
