--- a/index.html
+++ b/index.html
@@ -15,15 +15,42 @@ div.title{
   padding: 8px;
   background: rgba(0, 0, 0, 0.7);
   border: 2px solid #ffffff;
-  font-size: 30px;
+  font-size: 35px;
 }
 
+div.undertitle{
+  padding: 8px;
+  background: rgba(0, 0, 0, 0.7);
+  border: 2px solid #ffffff;
+  font-size: 28px;
+}
+div.video{
+	text-align:left;
+	padding: 8px;
+    background: rgba(0, 0, 0, 0.7);
+    border: 2px solid #ffffff;
+    font-size: 20px;
+}
 
 div.text{
   padding: 8px;
   background: rgba(0, 0, 0, 0.7);
   border: 2px solid #ffffff;
   font-size: 20px;
+}
+
+table,th
+{
+	border: 2px solid #ffffff;
+	background: rgba(0, 0, 0, 0.5);
+}
+table
+{
+	width:190;
+}
+th
+{
+	height:50px;
 }
 
 body {background-image:url('https://pic1.imgdb.cn/item/67a88bcad0e0a243d4fd7a4e.jpg');}
@@ -34,18 +61,30 @@ body{color:white}
 
 <div class="title">神金大网页</div>
 <p><p>
+<div class="undertitle">资源大区</div>
 <div class="text">
 <a href="http://tool.bitefu.net/123pan/?url=https://www.123865.com/s/2b41Td-rWVq3.html&type=down">点我下载ClassicCube!<br></a>
-<a href="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/99/43/28259254399/28259254399-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1739112098&gen=playurlv2&os=bcache&oi=1363558182&trid=0000205b976ce97a40768c7ca15995769186T&mid=3546662372903895&platform=html5&og=cos&upsig=d537f59fa72509891aa6a330edb18a4a&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=14713&bvc=vod&nettype=0&bw=12044&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000">早期tux大战比尔盖兹珍贵录像</a>
 </div>
-
 <p><p>
+<div class="undertitle">视频大区</div>
+<table>
+<tr>
+<th><img src="https://pic1.imgdb.cn/item/67a89de3d0e0a243d4fd897d.jpg" alt="tux打枪" width="180" height="135"></th>
+<th><a href="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/99/43/28259254399/28259254399-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1739112098&gen=playurlv2&os=bcache&oi=1363558182&trid=0000205b976ce97a40768c7ca15995769186T&mid=3546662372903895&platform=html5&og=cos&upsig=d537f59fa72509891aa6a330edb18a4a&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=14713&bvc=vod&nettype=0&bw=12044&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000">早期tux大战比尔盖兹珍贵录像</a></th>
+</tr>
+<tr>
+<th><img src="https://pic1.imgdb.cn/item/67a8a3e5d0e0a243d4fd8a74.jpg" alt="张太子头顶怎么尖尖的" width="180" height="135"></th>
+<th><a href="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/42/65/28297986542/28297986542-1-160.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1739119352&gen=playurlv2&os=bcache&oi=1055537982&trid=000039b600471a6244a59bca029a5374b183T&mid=3546662372903895&platform=html5&og=cos&upsig=23c79a18cbe9392eb14240dc7099f610&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=9265&bvc=vod&nettype=0&bw=88998&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000">张太子</a></th>
+</tr>
+</table>
+<p><p>
+<div class="undertitle">网址大区</div>
 <div class="text">
 <a href="https://dogisyyds.github.io/">蒋某似前留下的遗产<br></a>
 <a href="http://enterpage.us.kg/">enterPAGE-我的新站!<br></a>
 </div>
 <p><p>
-<div class="text">评论<div>
+<div class="undertitle">评论<div>
 <div class="text"><div>
 <script src="https://giscus.app/client.js"
         data-repo="enterbox/pagetalk"
