--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ body{color:white}
 <table>
 <tr>
 <th><img src="https://pic1.imgdb.cn/item/67a89de3d0e0a243d4fd897d.jpg" alt="tux打枪" width="180" height="135"></th>
-<th><a href="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/99/43/28259254399/28259254399-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1739112098&gen=playurlv2&os=bcache&oi=1363558182&trid=0000205b976ce97a40768c7ca15995769186T&mid=3546662372903895&platform=html5&og=cos&upsig=d537f59fa72509891aa6a330edb18a4a&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=14713&bvc=vod&nettype=0&bw=12044&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000">早期tux大战比尔盖兹珍贵录像</a></th>
+<th><a href="https://ik.imagekit.io/anrobush/28259254399-1-16.mp4?tr=orig&updatedAt=1739184707549">早期tux大战比尔盖兹珍贵录像</a></th>
 </tr>
 <tr>
 <th><img src="https://pic1.imgdb.cn/item/67a8a3e5d0e0a243d4fd8a74.jpg" alt="张太子头顶怎么尖尖的" width="180" height="135"></th>
-<th><a href="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/42/65/28297986542/28297986542-1-160.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1739119352&gen=playurlv2&os=bcache&oi=1055537982&trid=000039b600471a6244a59bca029a5374b183T&mid=3546662372903895&platform=html5&og=cos&upsig=23c79a18cbe9392eb14240dc7099f610&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&cdnid=9265&bvc=vod&nettype=0&bw=88998&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000">张太子</a></th>
+<th><a href="https://ik.imagekit.io/anrobush/28297986542-1-160.mp4?updatedAt=1739184888412">张太子</a></th>
 </tr>
 </table>
 <p><p>
