--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@ div.undertitle{
   border: 2px solid #ffffff;
   font-size: 28px;
 }
-div.video{
-	text-align:left;
-	padding: 8px;
-    background: rgba(0, 0, 0, 0.7);
-    border: 2px solid #ffffff;
-    font-size: 20px;
-}
 
 div.text{
   padding: 8px;
@@ -63,7 +56,20 @@ body{color:white}
 <p><p>
 <div class="undertitle">资源大区</div>
 <div class="text">
-<a href="http://tool.bitefu.net/123pan/?url=https://www.123865.com/s/2b41Td-rWVq3.html&type=down">点我下载ClassicCube!<br></a>
+<table>
+<tr>
+<th><img src="https://pic1.imgdb.cn/item/67b07954d0e0a243d4ffa334.png" alt="hcml" width="120" height="120"></th>
+<th><a href="http://tool.bitefu.net/123pan/?url=https://www.123912.com/s/2b41Td-98Vq3.html&type=down">--HCML--</a></th>
+</tr>
+<tr>
+<th><img src="https://pic1.imgdb.cn/item/67b07be1d0e0a243d4ffa40b.jpg" alt="j a  v  a" width="120" height="120"></th>
+<th><a href="https://javadl.oracle.com/webapps/download/AutoDL?BundleId=251646_7ed26d28139143f38c58992680c214a5">--java8--</a></th>
+</tr>
+<tr>
+<th><img src="https://pic1.imgdb.cn/item/67b07d75d0e0a243d4ffa479.png" alt="classicube" width="110" height="120"></th>
+<th><a href="http://tool.bitefu.net/123pan/?url=https://www.123865.com/s/2b41Td-rWVq3.html&type=down">--ClassicCube--</a></th>
+</tr>
+</table>
 </div>
 <p><p>
 <div class="undertitle">视频大区</div>
