--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ body{color:white}
 <div class="text">
 <a href="https://dogisyyds.github.io/">蒋某似前留下的遗产<br></a>
 <a href="http://enterpage.us.kg/">enterPAGE-我的新站!<br></a>
+<p>f1.2mc.shop:62527 -- 俺滴服务器!!!</p>
 </div>
 <p><p>
 <div class="undertitle">评论<div>
