--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ body{color:white}
 <th><img src="https://pic1.imgdb.cn/item/67a8a3e5d0e0a243d4fd8a74.jpg" alt="张太子头顶怎么尖尖的" width="180" height="135"></th>
 <th><a href="https://ik.imagekit.io/anrobush/28297986542-1-160.mp4?updatedAt=1739184888412">张太子</a></th>
 </tr>
+<tr>
+<th><img src="https://i0.hdslb.com/bfs/archive/3cfeffbb34e4c1bdab7f12e46b1209035a26fd43.jpg@760w_428h_1c.avif" alt="ccb" width="180" height="135"></th>
+<th><a href="https://ik.imagekit.io/anrobush/%E7%94%B5%E6%A3%8D%E7%AC%91%E4%BC%A0%E4%B9%8Bccb.mp4?updatedAt=1748146949585">电棍笑传之ccb</a></th>
+</tr>
 </table>
 <p><p>
 <div class="undertitle">网址大区</div>
