--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body{color:white}
 <th><a href="https://ik.imagekit.io/anrobush/28297986542-1-160.mp4?updatedAt=1739184888412">张太子</a></th>
 </tr>
 <tr>
-<th><img src="https://i0.hdslb.com/bfs/archive/3cfeffbb34e4c1bdab7f12e46b1209035a26fd43.jpg@760w_428h_1c.avif" alt="ccb" width="180" height="135"></th>
+<th><img src="https://pic1.imgdb.cn/item/68329d3758cb8da5c80cc49d.jpg" alt="ccb" width="180" height="135"></th>
 <th><a href="https://ik.imagekit.io/anrobush/%E7%94%B5%E6%A3%8D%E7%AC%91%E4%BC%A0%E4%B9%8Bccb.mp4?updatedAt=1748146949585">电棍笑传之ccb</a></th>
 </tr>
 </table>
